# photorot1080

./: Cargo.toml  README.md
gimpfiles/Scripts/: GimpRot180.scm  GimpRotLeft.scm  GimpRotNo.scm  GimpRotRight.scm
gimpfiles/Shell/: gimp.sh  gimprot180.sh  gimprotcck.sh  gimprotck.sh
src/: c8_diroutpress.rs  c8_mod.rs  dirpress.rs  get_dirlist.rs  get_dirlistc.rs  get_dirlistr.rs  irs_mod.rs  main.rs  main01.rs  mainnoir.rs  rc_mod.rs  rc_rotatepress.rs  settings.rs
