[package]
name = "photorot1080"
version = "0.1.0"
authors = ["jpretired"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { version = "^0", features = ["tabs"] }
iced = { version = "^0", features = [ "image"] }
iced_futures = "^0"
serde = { version = "1.0", features = ["derive"] }
native-dialog = "^0"
kamadak-exif = "^0"
image = "^0"
