[package]
name = "photorot1080c1310"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "^0", features = ["image"] }
serde = { version = "^0", features = ["derive"] }
native-dialog = "^0"
kamadak-exif = "^0"
rfd = { version = "^0", features = ["xdg-portal"] }
image = "^0"
